<resources>
    <string name="app_name">TripAlbum</string>
    <string name="visit_added">Se ha añadido la visita</string>
    <string name="add_missing_data">Tienes que completar todos los campos</string>
    <string name="add_missing_location">Tienes que seleccionar una posición</string>
    <string name="modify_confirm_dialog">¿Confirmar cambios?</string>
    <string name="delete_visit_dialog">Eliminar la visita permanentemente. ¿Estás seguro?</string>
    <string name="confirm_yes">Sí</string>
    <string name="confirm_no">No</string>
    <string name="date">Fecha</string>
    <string name="rating">Valoración</string>
    <string name="commentary">Comentario</string>
    <string name="add_button">Añadir</string>
    <string name="modify_button">Modificar</string>
    <string name="delete_button">Eliminar</string>
    <string name="add_visit_title">Registra tu visita a %1$s</string>
    <string name="modify_visit_title">Modifica tu visita a %1$s</string>
    <string name="visit_rating">Valoración: %1$f</string>
    <string name="province">Provincia</string>
    <string name="place">Lugar</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="clear">Limpiar</string>
    <string name="main_my_album">MI ÁLBUM</string>
    <string name="main_friends">LISTA DE AMIGOS</string>
    <string name="main_places">BUSCAR LUGARES</string>
    <string name="main_add_visit">AÑADIR VISITA</string>
    <string name="visited_places_title">LUGARES VISITADOS</string>
    <string name="interesting_places_title">LUGARES FAVORITOS</string>
    <string name="search_places">BUSCAR</string>
    <string name="add_visit">Añadir visita</string>
    <string name="add_interested">Añadir a favoritos</string>
    <string name="remove_interested">Eliminar de favoritos</string>
    <string name="friend_album_title">ÁLBUM DE %1$s</string>
    <string name="user_not_found">la búsqueda no coincide con ningún usuario</string>
    <string name="empty_phone">Debes introducir un número de teléfono</string>
    <string name="select">Seleccionar</string>
    <string name="delete_friend_dialog">Eliminar de la lista de amigos. ¿Estás seguro?</string>
    <string name="added_to_favorites">Añadido a favoritos</string>
    <string name="deleted_from_favorites">Eliminado de favoritos</string>
    <string name="friend_already_exists">Este usuario ya es tu amigo</string>
    <string name="this_is_you">No te puedes añadir a ti mismo</string>
    <string name="preferences">Preferencias</string>
    <string name="preferences_favorites_title">Sólo favoritos</string>
    <string name="preferences_detail_title">Vista detallada</string>
    <string name="preferences_modify_title">Permitir editar</string>
    <string name="preferences_favorites_summary">Ver sólo los lugares favoritos</string>
    <string name="preferences_detail_summary">Mostrar fecha y valoración de las visitas</string>
    <string name="preferences_modify_summary">Editar y eliminar visitas</string>
    <string name="preferences_visits">Visitas</string>
    <string name="preferences_places">Lugares</string>
    <string name="change_user">Cambiar usuario</string>
</resources>