<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="openViewVisits"
    android:padding="10dp"
    tools:context=".view.MainActivityView">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_main_1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="openMyAlbum"
                android:text="@string/main_my_album" />

            <Button
                android:id="@+id/button_main_2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_light"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="openFriendsList"
                android:text="@string/main_friends" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_main_3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="openSearchPlaces"
                android:text="@string/main_places" />

            <Button
                android:id="@+id/button_main_4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_700"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="openNewVisit"
                android:text="@string/main_add_visit" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openViewVisits"
            android:text="View visits" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>